--- a/style.css
+++ b/style.css
@@ -1105,7 +1105,7 @@ body.dark-mode .contact-form input, body.dark-mode .contact-form textarea {
 /* Botón flotante "Volver arriba" */
 .scroll-top {
   position: fixed;
-  bottom: 30px;
+  bottom: 100px;  /* Cambiado: más arriba para evitar conflicto con chatbot */
   right: 30px;
   width: 50px;
   height: 50px;
